<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
<<<<<<< HEAD
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vagas"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_vagas" />
        <item
            android:id="@+id/nav_vicurriculo"
            android:icon="@drawable/ic_view"
            android:title="Visualização Curriculo" />
        <item
            android:id="@+id/nav_cadcurriculo"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_alcurriculo"
            android:icon="@drawable/ic_alter"
            android:title="@string/menu_alter" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_configuracoes_black"
            android:title="@string/menu_config" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_exit" />
=======
            android:icon="@drawable/ic_disciplina_black"
            android:title="Home" />
        <item
            android:id="@+id/nav_vagas"
            android:icon="@drawable/ic_forum_black"
            android:title="Lista Aqui" />
        <item
            android:id="@+id/nav_vicurriculo"
            android:icon="@drawable/ic_forum_black"
            android:title="Visualização Curriculo" />
        <item
            android:id="@+id/nav_cadcurriculo"
            android:icon="@drawable/ic_chat_black"
            android:title="Cadastrar Aqui" />
        <item
            android:id="@+id/nav_alcurriculo"
            android:icon="@drawable/ic_configuracoes_black"
            android:title="Alterar Curriculo" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_configuracoes_black"
            android:title="Configurações" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_configuracoes_black"
            android:title="Sair" />
>>>>>>> a5519d4a2ed6a088ca3ee047dd67ae6147c54999
    </group>
</menu>
